feat: requisito TI-008 completado
REFS #125 #126